<resources>
    <string name="show">Show</string>
    <string name="episode">Episode</string>
    <string name="episode_number">Episode %s</string>
    <string name="episodes">Episodes</string>
    <string name="season">Season</string>
    <string name="season_number">Season %s</string>
    <string name="seasons">Seasons</string>
    <string name="unknown">unknown</string>
    <string name="episode_iswatched">Watched already</string>
    <string name="episode_notwatched">Not watched yet</string>
    <string name="specialseason">Special Episodes</string>
    <string name="search_hint">Search episodes</string>
    <string name="share_episode">Share episode</string>
    <string name="share_show">Share show</string>
    <string name="share_checkout">Check out</string>
    <string name="search_description">Episodes</string>
    <string name="description_overview">Overview</string>
    <string name="description_poster">Show poster</string>
    <string name="description_image">Episode image</string>
    <string name="norating">n/a</string>
    <string name="loading">Loading…</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="more">%s more</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="updated">Updated to latest version.</string>
    <string name="discard">Discard</string>
    <string name="close">Close</string>
    <string name="save_selection">Save selection</string>
    <plurals name="votes">
        <item quantity="zero">%d votes</item>
        <item quantity="one">%d vote</item>
        <item quantity="two">%d votes</item>
        <item quantity="few">%d votes</item>
        <item quantity="many">%d votes</item>
        <item quantity="other">%d votes</item>
    </plurals>
    <string name="offline">No network connectivity. Try again later.</string>
    <string name="app_not_available">No app available to handle this.</string>
    <string name="onlyx">Only available with X Subscription</string>
    <string name="shows">Shows</string>
    <string name="lists">Lists</string>
    <string name="activity">Activity</string>
    <string name="movies">Movies</string>
    <string name="statistics">Statistics</string>
    <string name="search">Search</string>
    <string name="add_show">Add Show</string>
    <string name="preferences">Settings</string>
    <string name="help">Help</string>
    <string name="shouts">Shouts</string>
    <string name="comments">Comments</string>
    <string name="shout_hint">Type a shout (in English)</string>
    <string name="shout">Shout!</string>
    <string name="isspoiler">Spoiler alert!</string>
    <string name="no_shouts">Be the first to shout!</string>
    <string name="shouts_for">Shouts for %s</string>
    <string name="autorefresh">Refreshing automagically</string>
    <string name="movies_watchlist">Watchlist (trakt)</string>
    <string name="watchlist_add">Add to watchlist</string>
    <string name="watchlist_remove">Remove from watchlist</string>
    <string name="watchlist_added">Added to watchlist</string>
    <string name="watchlist_removed">Removed from watchlist</string>
    <string name="movies_search_hint">Type a movie title</string>
    <string name="movies_empty">Search for a movie above.</string>
    <string name="movies_watchlist_empty">You have no internet connection or not added movies to your trakt watchlist.</string>
    <string name="trailer">Trailer</string>
    <string name="shows_with_next">%s with next episodes</string>
    <string name="shows_continuing">%s continuing</string>
    <string name="episodes_watched">%s watched</string>
    <string name="runtime_all_episodes">Runtime of all watched episodes</string>
    <plurals name="days_plural">
        <item quantity="one">%d day</item>
        <item quantity="zero">%d days</item>
        <item quantity="two">%d days</item>
        <item quantity="few">%d days</item>
        <item quantity="many">%d days</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="hours_plural">
        <item quantity="zero">%d hours</item>
        <item quantity="one">%d hour</item>
        <item quantity="two">%d hours</item>
        <item quantity="few">%d hours</item>
        <item quantity="many">%d hours</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="minutes_plural">
        <item quantity="zero">%d minutes</item>
        <item quantity="one">%d minute</item>
        <item quantity="two">%d minutes</item>
        <item quantity="few">%d minutes</item>
        <item quantity="many">%d minutes</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="your_rating">Your rating</string>
    <string name="love">Totally ninja!</string>
    <string name="hate">Weak Sauce :(</string>
    <string name="rating2">Terrible</string>
    <string name="rating3">Bad</string>
    <string name="rating4">Poor</string>
    <string name="rating5">Meh</string>
    <string name="rating6">Fair</string>
    <string name="rating7">Good</string>
    <string name="rating8">Great</string>
    <string name="rating9">Superb</string>
    <string name="episode_number_absolute">ABSOLUTE</string>
    <string name="episode_number_disk">DVD</string>
    <string name="episode_firstaired">Release date</string>
    <string name="episode_firstaired_unknown">Release date unknown</string>
    <string name="episode_dvdnumber">DVD Episode</string>
    <string name="show_actors">Actors</string>
    <string name="show_firstaired">First Aired</string>
    <string name="show_genres">Genres</string>
    <string name="show_runtime">Runtime</string>
    <string name="show_contentrating">Content Rating</string>
    <string name="episode_directors">Directors</string>
    <string name="episode_gueststars">Guest Stars</string>
    <string name="episode_writers">Writers</string>
    <string name="show_airtimeunit">min</string>
    <string name="show_isalive">Continuing</string>
    <string name="show_isnotalive">Ended</string>
    <string name="lastEdit">Last Edit // TVDb</string>
    <string name="services_watch">Watch</string>
    <string name="services_more">More</string>
    <string name="sort">Sort by</string>
    <string name="updateall_yes">Update (all)</string>
    <string name="menu_update_delta">Update (outdated only)</string>
    <string name="context_updateshow">Update</string>
    <string name="context_showinfo">Show Info</string>
    <string name="context_marknext">Watched next episode</string>
    <string name="today">today</string>
    <string name="now">now</string>
    <string name="daily">Daily</string>
    <string name="mark_episode">Watched episode</string>
    <string name="unmark_episode">Not yet watched episode</string>
    <string name="mark_all">Watched all</string>
    <string name="unmark_all">Watched none</string>
    <string name="mark_untilhere">Watched all previously aired</string>
    <string name="collect">Collected episode</string>
    <string name="uncollect">Not yet collected episode</string>
    <string name="collect_all">Collected all</string>
    <string name="uncollect_all">Collected none</string>
    <string name="trakt_submitqueued">Submitting to trakt.</string>
    <string name="trakt_seen">%s seen.</string>
    <string name="trakt_notseen">%s not seen.</string>
    <string name="trakt_collected">%s collected.</string>
    <string name="trakt_notcollected">%s not collected.</string>
    <string name="add_empty">There are no shows here or your device has no internet connection.</string>
    <string name="shows_empty">Look in the menu above to add some shows.</string>
    <string name="menu_updateart">Load posters</string>
    <string name="list_item_manage">Manage lists</string>
    <string name="connect_trakt">Connect trakt</string>
    <string name="connect_trakt_done">Connected to trakt!</string>
    <string name="add_trakt_shows">Add shows from your library:</string>
    <string name="show_library">Show your library</string>
    <string name="upload_shows">Upload your SeriesGuide show list:</string>
    <string name="upload_existing_shows">Upload existing shows</string>
    <string name="prefs_category_basic">Basics</string>
    <string name="prefs_category_sharing">Services</string>
    <string name="prefs_category_advanced">Advanced</string>
    <string name="prefs_category_about">About</string>
    <string name="pref_onlyfuture">No aired episodes</string>
    <string name="pref_onlyfuturesummary">Never display already aired episodes</string>
    <string name="pref_onlyseasoneps">Hide special episodes</string>
    <string name="pref_onlyseasonepssummary">Special episodes disappear from everywhere except season list</string>
    <string name="pref_language">Content language</string>
    <string name="pref_updatewifionly">Update over Wi-Fi only</string>
    <string name="clearGetGlueCredentials">Disconnect GetGlue</string>
    <string name="clearGetGlueCredentialssummary">Check in with GetGlue to reconnect</string>
    <string name="pref_traktsummary">Add or edit your trakt.tv credentials</string>
    <string name="pref_traktsync">Manual sync with trakt.tv</string>
    <string name="pref_autoaddshows">Add new trakt shows</string>
    <string name="pref_autoaddshowssummary">Automatically add shows from your trakt activity stream</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_theme">App Theme</string>
    <string name="pref_other">Other</string>
    <string name="pref_autoupdate">Turn on Auto Update</string>
    <string name="pref_autoupdatesummary">Periodically update your shows</string>
    <string name="backup">Backup/Restore</string>
    <string name="backup_summary">Backup or restore your shows</string>
    <string name="pref_upcominglimit">Upcoming shows within…</string>
    <string name="pref_number">Number format</string>
    <string name="pref_offset">Manual time offset</string>
    <string name="clear_cache">Clear image caches</string>
    <string name="clear_cache_summary">Remove all cached images from your device</string>
    <string name="pref_ganalytics">Google Analytics</string>
    <string name="pref_ganalyticssummary">Tracks the usage of features to help improve SeriesGuide</string>
    <string name="pref_hideimages">Hide images</string>
    <string name="pref_hideimagessummary">Hide images from your photo gallery (reboot required)</string>
    <string name="checkin">Check in</string>
    <string name="menu_rate_episode">Rate episode</string>
    <string name="menu_rate_show">Rate show</string>
    <string name="addtocalendar">Add to calendar</string>
    <string name="dismiss">Dismiss</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notificationssummary">Notify about new episodes</string>
    <string name="pref_notifyfavonly">Favorites only</string>
    <string name="pref_notifyfavonlysummary">Only receive notifications for favorited shows</string>
    <string name="pref_ringtone">Ringtone</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibratesummary">Also vibrate on displaying a notification</string>
    <string name="migration_header">Migrate to SeriesGuide</string>
    <string name="migration_description">SeriesGuide X is now X Life-Time Pass, you should migrate your shows to the free version of SeriesGuide. Keep X installed to unlock all features in the free version.</string>
    <string name="migration_backup">Touch below to create a fresh backup of your shows.</string>
    <string name="migration_action_backup">Backup Shows</string>
    <string name="migration_install">Touch below to install the free version of SeriesGuide.</string>
    <string name="migration_action_install">Install SeriesGuide</string>
    <string name="upgrade_title">Get X features</string>
</resources>