<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="False"
        android:key="onlyFutureEpisodes"
        android:summary="@string/pref_onlyfuturesummary"
        android:title="@string/pref_onlyfuture" />
    <CheckBoxPreference
        android:defaultValue="False"
        android:key="onlySeasonEpisodes"
        android:summary="@string/pref_onlyseasonepssummary"
        android:title="@string/pref_onlyseasoneps" />
    <CheckBoxPreference
        android:defaultValue="False"
        android:key="com.battlelancer.seriesguide.autoupdatewlanonly"
        android:title="@string/pref_updatewifionly" />

    <ListPreference
        android:defaultValue="en"
        android:entries="@array/languages"
        android:entryValues="@array/languageData"
        android:key="language"
        android:title="@string/pref_language" />

    <PreferenceCategory android:title="@string/pref_notifications" >
        <CheckBoxPreference
            android:defaultValue="True"
            android:key="com.battlelancer.seriesguide.notifications"
            android:summary="@string/pref_notificationssummary"
            android:title="@string/pref_notifications" />
        <CheckBoxPreference
            android:defaultValue="True"
            android:key="com.battlelancer.seriesguide.notifications.favonly"
            android:summary="@string/pref_notifyfavonlysummary"
            android:title="@string/pref_notifyfavonly" />
        <CheckBoxPreference
            android:defaultValue="False"
            android:key="com.battlelancer.seriesguide.notifications.vibrate"
            android:summary="@string/pref_vibratesummary"
            android:title="@string/pref_vibrate" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:key="com.battlelancer.seriesguide.notifications.ringtone"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:title="@string/pref_ringtone" />
    </PreferenceCategory>

</PreferenceScreen>