<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:key="com.battlelancer.seriesguide.upgrade"
        android:title="@string/upgrade_title" >
        <intent
            android:targetClass="com.battlelancer.seriesguide.billing.BillingActivity"
            android:targetPackage="@string/package_name" />
    </Preference>
    <Preference
        android:key="clearGetGlueCredentials"
        android:summary="@string/clearGetGlueCredentialssummary"
        android:title="@string/clearGetGlueCredentials" />

    <PreferenceCategory android:title="@string/trakt" >
        <Preference
            android:key="com.battlelancer.seriesguide.trakt.connect"
            android:summary="@string/pref_traktsummary"
            android:title="@string/connect_trakt" >
            <intent
                android:targetClass="com.battlelancer.seriesguide.ui.ConnectTraktActivity"
                android:targetPackage="@string/package_name" />
        </Preference>
        <Preference
            android:key="com.battlelancer.seriesguide.trakt"
            android:title="@string/pref_traktsync" >
            <intent
                android:targetClass="com.battlelancer.seriesguide.ui.TraktSyncActivity"
                android:targetPackage="@string/package_name" />
        </Preference>

        <CheckBoxPreference
            android:defaultValue="True"
            android:key="com.battlelancer.seriesguide.autoaddtraktshows"
            android:summary="@string/pref_autoaddshowssummary"
            android:title="@string/pref_autoaddshows" />
    </PreferenceCategory>

</PreferenceScreen>