<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_sesortby"
        android:icon="@drawable/ic_action_sort"
        android:showAsAction="never"
        android:title="@string/sort"/>
    <item
        android:id="@+id/menu_watched_all"
        android:showAsAction="never"
        android:title="@string/mark_all"/>
    <item
        android:id="@+id/menu_unwatched_all"
        android:showAsAction="never"
        android:title="@string/unmark_all"/>
    <item
        android:id="@+id/menu_collect_all"
        android:showAsAction="never"
        android:title="@string/collect_all"/>
    <item
        android:id="@+id/menu_uncollect_all"
        android:showAsAction="never"
        android:title="@string/uncollect_all"/>

</menu>
