<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_search"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/search_hint" />
    <item
        android:id="@+id/menu_action_shows_advanced"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/prefs_category_advanced">
        <menu>
            <item
                android:id="@+id/menu_updateart"
                android:title="@string/menu_updateart" />
            <item
                android:id="@+id/menu_update"
                android:title="@string/menu_update_delta" />
            <item
                android:id="@+id/menu_fullupdate"
                android:title="@string/updateall_yes" />
        </menu>
        </item>

</menu>
