<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:id="@+id/TextViewShowInfoOverview"
        style="@style/SmallItems.WithSideMargins"
        android:text="@string/description_overview" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_marginLeft="@dimen/default_padding"
        android:layout_marginRight="@dimen/default_padding"
        layout="@layout/ratingbar" >
    </include>

    <TextView
        android:id="@+id/TextViewShowInfoGenres"
        style="@style/SmallItems.WithSideMargins"
        android:text="@string/show_genres" />

    <TextView
        android:id="@+id/TextViewShowInfoActors"
        style="@style/SmallItems.WithSideMargins"
        android:text="@string/show_actors" />

    <TextView
        android:id="@+id/TextViewShowInfoContentRating"
        style="@style/SmallItems.WithSideMargins"
        android:text="@string/show_contentrating" />

    <TextView
        android:id="@+id/TextViewShowInfoRuntime"
        style="@style/SmallItems.WithSideMargins"
        android:text="@string/show_runtime" />

    <TextView
        android:id="@+id/TextViewShowInfoFirstAirdate"
        style="@style/SmallItems.WithSideMargins"
        android:text="@string/show_firstaired" />

</merge>