<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_show_manage_lists"
        android:icon="@drawable/ic_action_list"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/list_item_manage"/>
    <item
        android:id="@+id/menu_show_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:title="@string/share_show"/>
    <item
        android:id="@+id/menu_show_rate"
        android:icon="@drawable/trakt_heart"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/menu_rate_show"/>

</menu>