<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference android:title="@string/prefs_category_basic" >
        <intent
            android:action="com.battlelancer.seriesguide.PREFS_BASIC"
            android:targetClass="com.battlelancer.seriesguide.ui.SeriesGuidePreferences"
            android:targetPackage="@string/package_name" />
    </Preference>
    <Preference android:title="@string/prefs_category_sharing" >
        <intent
            android:action="com.battlelancer.seriesguide.PREFS_SHARING"
            android:targetClass="com.battlelancer.seriesguide.ui.SeriesGuidePreferences"
            android:targetPackage="@string/package_name" />
    </Preference>
    <Preference android:title="@string/prefs_category_advanced" >
        <intent
            android:action="com.battlelancer.seriesguide.PREFS_ADVANCED"
            android:targetClass="com.battlelancer.seriesguide.ui.SeriesGuidePreferences"
            android:targetPackage="@string/package_name" />
    </Preference>
    <Preference android:title="@string/prefs_category_about" >
        <intent
            android:action="com.battlelancer.seriesguide.PREFS_ABOUT"
            android:targetClass="com.battlelancer.seriesguide.ui.SeriesGuidePreferences"
            android:targetPackage="@string/package_name" />
    </Preference>

</PreferenceScreen>