<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <include layout="@layout/buttonbar" >
    </include>

    <include layout="@layout/ratingbar" >
    </include>

    <TextView
        android:id="@+id/TextViewEpisodeDescription"
        style="@style/SmallItems.WithSideMargins" />

    <TextView
        android:id="@+id/labelGuestStars"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/episode_gueststars" />

    <TextView
        android:id="@+id/TextViewEpisodeGuestStars"
        style="@style/SmallItems.WithSideMargins" />

    <TextView
        android:id="@+id/labelDirectors"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/episode_directors" />

    <TextView
        android:id="@+id/TextViewEpisodeDirectors"
        style="@style/SmallItems.WithSideMargins" />

    <TextView
        android:id="@+id/labelWriters"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/episode_writers" />

    <TextView
        android:id="@+id/TextViewEpisodeWriters"
        style="@style/SmallItems.WithSideMargins" />

    <TextView
        android:id="@+id/labelDVD"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/episode_dvdnumber" />

    <TextView
        android:id="@+id/textViewEpisodeDVDnumber"
        style="@style/SmallItems.WithSideMargins"
        android:text="@string/episode_unkownairdate" />

    <TextView
        android:id="@+id/labelAirday"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/episode_firstaired" />

    <TextView
        android:id="@+id/TextViewEpisodeFirstAirdate"
        style="@style/SmallItems.WithSideMargins" />

</merge>