<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2014 Uwe Trottmann
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_add_show"
        android:icon="@drawable/ic_action_new_show_inverse"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_shows_add" />
    <item
        android:id="@+id/menu_search"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/search_hint" />
    <item
        android:id="@+id/menu_updateart"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/menu_updateart" />
    <item
        android:id="@+id/menu_update"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/menu_update_delta" />
    <item
        android:id="@+id/menu_fullupdate"
        android:orderInCategory="7"
        android:showAsAction="never"
        android:title="@string/updateall_yes" />

</menu>
